[gd_scene load_steps=5 format=3 uid="uid://da3rvnllokpwl"]

[ext_resource type="Texture2D" uid="uid://3ko8pv2n6v6k" path="res://Resource/Img/1714708251113.jpg" id="1_8s83v"]
[ext_resource type="Script" path="res://Script/setting_scene.gd" id="1_efs84"]
[ext_resource type="FontFile" uid="uid://du5po75t5by2" path="res://Resource/Font/汉仪洛天依体简.ttf" id="1_v8qym"]
[ext_resource type="Theme" uid="uid://cr5645fhno242" path="res://Resource/UITheme.tres" id="4_qu5h3"]

[node name="SettingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_efs84")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = -61.0
offset_right = 1156.0
offset_bottom = 682.0
texture = ExtResource("1_8s83v")
expand_mode = 3

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.705882)
self_modulate = Color(0, 0, 0, 0.470588)
layout_mode = 0
offset_left = -13.0
offset_top = -74.0
offset_right = 1184.0
offset_bottom = 697.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 174.0
offset_top = 91.0
offset_right = 967.0
offset_bottom = 441.0
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Adjust" type="HBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 20

[node name="AdjustLabel" type="Label" parent="ScrollContainer/HBoxContainer/Adjust"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 27
text = "误差调整 ADJUSTMENT"

[node name="AdjustSpinBox" type="SpinBox" parent="ScrollContainer/HBoxContainer/Adjust"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_qu5h3")
min_value = -5.0
max_value = 5.0
step = 0.01

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/Adjust"]
layout_mode = 2

[node name="Volume" type="HBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="VolumeLabel" type="Label" parent="ScrollContainer/HBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 27
text = "音量设置  VOLUME"

[node name="VolumeHSlider" type="HSlider" parent="ScrollContainer/HBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tick_count = 6

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/Volume"]
layout_mode = 2

[node name="Path" type="HBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="PathLabel" type="Label" parent="ScrollContainer/HBoxContainer/Path"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 27
text = "歌单路径  PATH"

[node name="PathTextEdit" type="LineEdit" parent="ScrollContainer/HBoxContainer/Path"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 25
placeholder_text = "X:/XX/XX/MscList/"
text_direction = 1

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/Path"]
layout_mode = 2

[node name="Control" type="HSeparator" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="KeyHBoxContainer1" type="HBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 25
text = " 轨道 1 键位 TRACK ONE"

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 23
item_count = 1
selected = 0
popup/item_0/text = "D"
popup/item_0/id = 0

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer1"]
layout_mode = 2

[node name="KeyHBoxContainer2" type="HBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 25
text = " 轨道 2 键位 TRACK TWO"

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 23
item_count = 1
selected = 0
popup/item_0/text = "F"
popup/item_0/id = 0

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer2"]
layout_mode = 2

[node name="KeyHBoxContainer3" type="HBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 25
text = " 轨道 3 键位 TRACK THREE"

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 23
item_count = 1
selected = 0
popup/item_0/text = " J"
popup/item_0/id = 0

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer3"]
layout_mode = 2

[node name="KeyHBoxContainer4" type="HBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 25
text = " 轨道 4 键位 TRACK FOUR"

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 23
item_count = 1
selected = 0
popup/item_0/text = "K"
popup/item_0/id = 0

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer4"]
layout_mode = 2

[node name="KeyHBoxContainer5" type="HBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 25
text = " 暂停游戏 PAUSE"

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 23
item_count = 1
selected = 0
popup/item_0/text = "ESC"
popup/item_0/id = 0

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer5"]
layout_mode = 2

[node name="KeyHBoxContainer6" type="HBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 25
text = " 继续游戏 RESUME"

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 23
item_count = 1
selected = 0
popup/item_0/text = "SPACE"
popup/item_0/id = 0

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/KeyHBoxContainer6"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 226.0
offset_top = 484.0
offset_right = 927.0
offset_bottom = 532.0
size_flags_vertical = 10
theme_override_constants/separation = 45

[node name="Control2" type="Control" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DefaultButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 30
text = "  恢复默认 DEFAULT  "

[node name="SaveButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_v8qym")
theme_override_font_sizes/font_size = 30
text = "  保存更改 SAVE  "

[node name="Control3" type="Control" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="ScrollContainer/HBoxContainer/Adjust/AdjustSpinBox" to="." method="_on_adjust_spin_box_value_changed"]
[connection signal="value_changed" from="ScrollContainer/HBoxContainer/Volume/VolumeHSlider" to="." method="_on_volume_h_slider_value_changed"]
[connection signal="button_down" from="Buttons/DefaultButton" to="." method="_on_default_button_button_down"]
[connection signal="button_down" from="Buttons/SaveButton" to="." method="_on_save_button_button_down"]
